fix(nav): Utiliser favicon.svg comme logo

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1089,7 +1089,7 @@ const { title, description = "Editrix - Le co-monteur vidéo IA pour YouTube, Ti
 		<header>
 			<div class="container">
 				<nav>
-					<a href="/" class="logo"><img src="/logo.png" alt="Editrix" /></a>
+					<a href="/" class="logo"><img src="/favicon.svg" alt="Editrix" /></a>
 					<ul>
 						<li><a href="/">Accueil</a></li>
 						<li class="nav-dropdown">
